fixed overflowing background and uncentered footer

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -25,27 +25,37 @@ body {
   margin-bottom: 3rem;
 }
 
-body::before {
+.background {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: var(--dark-cyan);
+  display: grid;
+  place-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.background::before {
   content: "";
   background-image: url("../images/bg-pattern-top.svg");
   background-repeat: no-repeat;
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: -1;
   background-position: bottom right;
   left: -50%;
   top: -40%;
 }
 
-body::after {
+.background::after {
   content: "";
   background-image: url("../images/bg-pattern-bottom.svg");
   background-repeat: no-repeat;
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: -1;
   background-position: top left;
   right: -50%;
   bottom: -50%;
@@ -57,6 +67,7 @@ body::after {
   height: 375px;
   border-radius: 15px;
   text-align: center;
+  z-index: 2;
 }
 
 footer {
